# dingo-expr

./: .gitignore  .gitmodules  README.md  build.gradle  gradle.properties  libexpr.code-workspace  settings.gradle
.github/workflows/: build.yml  buildPublish.yml  publish.yml
annotations/: build.gradle
annotations/src/main/java/io/dingodb/expr/annotations/: OperatorInfo.java  Operators.java  OperatorsInfo.java  OperatorsProcessor.java  ProcessorUtils.java
buildSrc/src/main/groovy/: java-conventions.gradle
coding/: build.gradle
coding/src/main/java/io/dingodb/expr/coding/: ArrayCoder.java  CodingFlag.java  ExprCoder.java  FunIndex.java  RelOpCoder.java  TypeCoder.java  ValCoder.java
coding/src/test/java/io/dingodb/expr/coding/: TestExprCoder.java  TestRelOpCoder.java
common/: build.gradle
common/src/main/java/io/dingodb/expr/common/timezone/: DateTimeUtils.java  InputTypeAnalyzer.java
config/: dingo.dic
config/checkstyle/: suppression.xml
console/: build.gradle
console/src/main/java/io/dingodb/expr/console/: DingoExprConsole.java
docs/: .gitignore  conf.py  index.rst
jni/: build.gradle
jni/src/main/cpp/: .clang-format  .gitignore  CMakeLists.txt  libexpr_jni.cc
jni/src/main/java/io/dingodb/expr/jni/: LibExprJni.java
jni/src/test/java/io/dingodb/expr/jni/: TestLibExprJni.java
json/: build.gradle
parser/: build.gradle
parser/src/main/antlr/: DingoExprLexer.g4
parser/src/main/java/io/dingodb/expr/parser/: DefaultFunFactory.java  ExprParser.java  FunFactory.java
parser/src/test/java/io/dingodb/expr/parser/: TestExprParser.java  TestFunFactory.java
rel/: build.gradle
rel/src/main/java/io/dingodb/expr/rel/: AbstractRelOp.java  CacheOp.java  CacheSupplier.java  CacheSupplierImpl.java  PipeOp.java  RelConfig.java  RelOp.java  RelOpBuilder.java  RelOpVisitor.java  RelOpVisitorBase.java  SourceOp.java  TandemOp.java  TupleCompileContext.java  TupleCompileContextImpl.java  TupleKey.java  TypedRelOp.java
rel/src/test/java/io/dingodb/expr/rel/: TestRelOp.java
runtime/: build.gradle
runtime/src/main/java/io/dingodb/expr/runtime/: CompileContext.java  ExprCompiler.java  ExprConfig.java  ExprConfigImpl.java  ExprContext.java  ExprPushdownCond.java  TupleEvalContext.java  TupleEvalContextImpl.java
test/: build.gradle
test/src/main/java/io/dingodb/expr/test/: JsonContext.java  LibExprJniUtils.java
test/src/test/java/io/dingodb/expr/test/: ExprsHelper.java  TestEvalConst.java  TestEvalConstJni.java  TestIndexOp.java  TestParseEvalConst.java  TestParseEvalConstJni.java  TestParseEvalVar.java  TestToDebugString.java  TestToString.java
(+412 files in other folders)
